--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -108,9 +108,9 @@
                             $("#proizvodi").append(
                                 '<div class="card mb-4 border-success">' +
                                     '<div class="card-body">' +
-                                        '<div class="row justify-content-between">' +
-                                            '<div class="col-2">' +
-                                                '<img alt="proizvod" class="card-img-top" width="150" height="150" src="/Uploads/' + data.Slika + '" />' +
+                                        '<div class="row">' +
+                                            '<div class="col-2" style="padding-bottom: 0 !important">' +
+                                                '<img alt="proizvod" class="card-img-top w-75 h-75 mt-3" width="150" height="150" src="/Uploads/' + data.Slika + '" />' +
                                             '</div>' +
                                             '<div class="col-10">' +
                                                 '<div class="d-flex justify-content-between">' +
