update review frontend

--- a/Online Shop/Proizvod.html
+++ b/Online Shop/Proizvod.html
@@ -85,6 +85,8 @@
         // Odjava korisnika
         jQuery(function () {
             $("#kupmsg").addClass("d-none");
+            $("#nema").addClass("d-none");
+
             // id iz url
             let searchParams = new URLSearchParams(window.location.search)
 
@@ -135,6 +137,42 @@
                 }
             });
 
+            // ucitavanje recenzija
+            $.ajax({
+                url: "/api/reviews/RecenzijeZaProizvodPoId",
+                type: "POST",
+                data: JSON.stringify({
+                    Id: Id,
+                }),
+
+                async: false,
+                cache: false,
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (response) {
+                    var res = JSON.parse(response);
+
+                    if (res.length > 0) {
+                        $(function () {
+                            // popuni tabelu
+                            $.each(res, function (key, data) {
+                                // dodavanje reda po red
+                                $("#recenzijelista").append(
+                                    '<div class="col-md-10 pt-4"><div class="card"><div class="card-body m-3"><div class="row"><div class="col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0">' +
+                                    '<img src="/Uploads/' + data.Slika + '" class=" shadow-1 rounded-5" alt="sliak recenzije" width="150" height="150" /></div>' +
+                                    '<div class="col-lg-8"><h4>' + data.Naslov + '</h4><p class="text-muted fw-light mb-4">' + data.SadrzajRecenzije + '</p><p class="fw-bold lead mb-1"><strong>' + data.Ime + ' ' + data.Prezime + '</strong></p>' +
+                                    '<p class="fw-bold text-muted mb-0">Shopy Kupac</p></div></div></div></div></div>'
+                                );
+                            });
+                        });
+                    }
+                    else {
+                        // nema recenzija
+                        $("#nema").removeClass("d-none");
+                    }
+                }
+            });
+
             // limitiranje unosa kolicine
             $('input').on('input', function () {
                 var value = $(this).val();
@@ -169,41 +207,9 @@
             });
 
             // cuvanje izmena
-            $("#azurirajbtn").on('click', function () {
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/users/AzuriranjeProfilaKorisnika",
-                    type: "POST",
-                    data: JSON.stringify({
-                        Id: Id,
-                        KorisnickoIme: korisnickoIme,
-                        Ime: ime,
-                        Lozinka: "oc_auth_434u3dfs-dsdw-dummy",
-                        Prezime: prezime,
-                        Pol: pol,
-                        Email: email,
-                        DatumRodjenja: datumRodjenja
-                    }),
-
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // azuriranje podataka je proslo uspesno
-                            {
-                                window.location.href = "ListaKorisnika.html";
-                                return false;
-                            }
-                            else {
-                                // desila se greska - prikazi je
-                                $("#divgreske").removeClass('d-none');
-                                $("#greske").text(JSON.parse(response).Poruka);
-                            }
-                        }
-                    }
-                });
+            $("#narucibtn").on('click', function () {
+                // ajax poziv ka api-ju za vrsenje porudzbine
+                
             });
         });
     </script>
@@ -242,8 +248,8 @@
             </div>
         </div>
     </nav>
-    <section class="pt-5">
-        <div class="container px-4 pt-lg-5 mt-5">
+    <section class="pt-0">
+        <div class="container px-4 pt-lg-5 mt-0">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6">
                 <img class="w-75 h-75 card-img-top mb-5 mb-md-0" src="" id="slika" alt="proizvod" /></div>
@@ -264,7 +270,7 @@
             </div>
     </section>
     <section class="px-4 p-md-5 text-center text-lg-start border-0">
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center" id="recenzijelista">
 
             <!-- Naslov pocetka recenzija -->
             <div class="col-md-10">
@@ -286,24 +292,6 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <h4>Trenutno nema recenzija za proizvod. Dođite kasnije!</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-10 pt-4">
-                <div class="card">
-                    <div class="card-body m-3">
-                        <div class="row">
-                            <div class="col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0">
-                                <img src="/Images/rgbg.jpg" class=" shadow-1 rounded-5" alt="sliak recenzije" width="150" height="150" />
-                            </div>
-                            <div class="col-lg-8">
-                                <h4>naslovo</h4>
-                                <p class="text-muted fw-light mb-4">sadrzaj</p>
-                                <p class="fw-bold lead mb-1" id="imeprezime"><strong>kupac ime prez</strong></p>
-                                <p class="fw-bold text-muted mb-0">Shopy Kupac</p>
                             </div>
                         </div>
                     </div>
