--- a/Online Shop/Proizvod.html
+++ b/Online Shop/Proizvod.html
@@ -268,6 +268,7 @@
                     <p class="text-danger align-items-center pt-2" id="kupmsg">Samo kupci sa aktivnim nalogom na platformi mogu poručiti proizvod.</p>
                 </div>
             </div>
+        </div>
     </section>
     <section class="px-4 p-md-5 text-center text-lg-start border-0">
         <div class="row d-flex justify-content-center" id="recenzijelista">
